--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -149,6 +149,21 @@ section{
 
 // Gradeint end
 
+// Animation
+@keyframes crossfadein {
+  0% {
+    opacity: 0;
+  }
+  25% {
+    opacity: 1;
+  }
+  75% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 
 
 // Background
@@ -156,10 +171,10 @@ main{
   background-image:
     url("/3d-gradient.svg"),
     url("/footer-gradient.svg");
-  background-position:
+    background-position:
     center top, /* this positions the first image */
     center bottom; /* this positions the second image */
-  background-repeat:
+    background-repeat:
     no-repeat; /* this applies to both images */
   background-size: 1100px auto;
 }
@@ -512,6 +527,8 @@ main{
     .icons-grid{
       display: flex;
       flex-wrap: wrap;
+      width: 100%;
+      position: relative;
       .icons-box{
         width: 20%;
         @media (max-width: $mobile-landscape){
@@ -520,21 +537,75 @@ main{
         .i-wrap{
           margin: 12px;
           padding: 16px;
+          display: flex;
+          height: auto;
+          position: relative;
           background: rgba(248,248,252,.8);
           border-radius: 12px;
-          a{
+          a, div{
             display: flex;
             align-items: center;
             text-align: center;
             @media (max-width: $mobile-landscape){
             }
             img{
-              width: 100%;
+              height: 120px;
+              width: 120px;
               @media (max-width: $mobile-landscape){
-                height: 75%;
+                height: 100%;
+                width: 100%;
               }
             }
           }
+          .img-ani{
+            height: 120px;
+            width: 120px;
+            position: relative;
+            .img-list{
+              height: 120px;
+              width: 120px;
+              img{
+                position: absolute;
+                top: 0;
+                left: 0;
+                overflow: hidden;
+                &.clay{
+                  opacity: 1;
+                }
+                &.gradient{
+                  opacity: 0;
+                }
+                &.color{
+                  opacity: 0;
+                }
+                &.premium{
+                  opacity: 0;
+                }
+              }
+            }
+            &:hover{
+              img{
+                animation-name: crossfadein;
+                animation-iteration-count: infinite;
+                transition-timing-function: linear;
+                animation-duration: 5s;
+
+              }
+              img:nth-child(1){
+                animation-delay: -4s;
+              }
+              img:nth-child(2){
+                animation-delay: -3s;
+              }
+              img:nth-child(3){
+                animation-delay: -2s;
+              }
+              img:nth-child(4){
+                animation-delay: -1s;
+              }
+            }
+          }
+
         }
       }
     }
