--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -227,9 +227,10 @@ main{
       font-weight: 700;
       letter-spacing: -2.5px;
       display: inline-block;
+      line-height: 100%;
       padding: 12px 0;
       @media (max-width: $mobile-landscape){
-        font-size: 32px;
+        font-size: 34px;
         padding: 12px;
       }
     }
@@ -265,7 +266,7 @@ main{
           justify-content: center;
           img{
             margin: 8px;
-            height: 30px;
+            height: 24px;
           }
       }
     }
@@ -441,7 +442,13 @@ main{
     border-radius: 41px;
     z-index: 8;
     position: relative;
-
+    &.disable{
+      background: rgba(200,200,200,.2);
+      border-color: rgba(200,200,200,.8);
+    }
+    &.request{
+      font-size: 20px;
+    }
     @media (max-width: $mobile-landscape){
       margin-right: 0;
     }
@@ -538,7 +545,7 @@ main{
         padding: 12px;
         text-align: center;
         font-size: 32px;
-        margin-bottom: 24px;
+        margin-bottom: 2px;
       }
     }
     p{
@@ -546,6 +553,9 @@ main{
       font-size: 18px;
       margin-bottom: 32px;
       margin-top: 20px;
+      @media (max-width: $mobile-landscape){
+        margin-top: 2px;
+      }
     }
     .icons-grid{
       display: flex;
@@ -679,6 +689,7 @@ main{
     @media (max-width: $mobile-landscape){
       margin: 0 16px;
       margin-bottom: 54px;
+      margin-top: 40px;
     }
     p{
       width: 600px;
@@ -699,7 +710,7 @@ main{
         padding: 12px;
         text-align: center;
         font-size: 32px;
-        margin-bottom: 24px;
+        margin-bottom: 4px;
       }
     }
 
@@ -783,15 +794,15 @@ main{
               font-size: 48px;
               font-weight: 700;
               line-height: 100%;
-              letter-spacing: -2px;
+              letter-spacing: -3px;
               margin-bottom: 8px;
               @media (max-width: $mobile-landscape){
                 font-size: 40px;
               }
             }
             p{
-              font-size: 20px;
-              line-height: 130%;
+              font-size: 18px;
+              line-height: 140%;
               margin-bottom: 24px;
               text-align: left;
               width: 100%;
@@ -808,7 +819,9 @@ main{
             width: 100%;
           }
           .r-im-wrap{
+            padding: 36px;
             img{
+              border-radius: 24px;
               width: 100%;
             }
           }
@@ -878,10 +891,15 @@ main{
           font-weight: 400;
         }
         a{
-          font-size: 18px;
           display: inline-block;
           line-height: 140%;
           margin: auto;
+          .llnk{
+            font-size: 20px!important;
+          }
+          @media (max-width: $mobile-landscape){
+            font-size: 16px;
+          }
         }
       }
       strong{
@@ -893,6 +911,9 @@ main{
         line-height: 140%;
         margin: 8px 0;
         display: block;
+        @media (max-width: $mobile-landscape){
+          font-size: 16px;
+        }
         &:hover{
           opacity: .8;
         }
@@ -922,10 +943,16 @@ main{
       }
       a{
         font-weight: 500;
-        font-size: 20px;
+
         line-height: 90%;
+        .llnk{
+          font-size: 20px!important;
+        }
         &:hover{
           opacity: .8;
+        }
+        @media (max-width: $mobile-landscape){
+          font-size: 16px;
         }
       }
 
@@ -980,4 +1007,11 @@ main{
       }
     }
   }
+}
+
+.ph-float{
+  position: fixed;
+  bottom: 36px;
+  left: 120px;
+  z-index: 111111;
 }
