--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -701,6 +701,20 @@ main{
         width: 100%;
       }
     }
+    a{
+      font-weight: 700;
+
+      line-height: 90%;
+      .llnk{
+        font-size: 20px!important;
+      }
+      &:hover{
+        opacity: .8;
+      }
+      @media (max-width: $mobile-landscape){
+        font-size: 16px;
+      }
+    }
     h2{
       font-size: 44px;
       font-weight: 700;
