--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -1026,11 +1026,31 @@ main{
 .ph-float{
   position: fixed;
   bottom: 36px;
-  left: 120px;
+  left: 110px;
   @media (max-width: $mobile-landscape){
     left: 50%;
     transform: translate(-50%, -50%);
     bottom: 16px;
   }
   z-index: 111111;
+}
+
+.ad-float{
+  position: fixed;
+  bottom: 36px;
+  right: 110px;
+  z-index: 111114;
+  @media (max-width: $mobile-landscape){
+      display: none;
+  }
+  a{
+    display: block;
+    line-height: 0;
+    img{
+      max-width: 300px;
+      border-radius: 8px;
+      border: 1px solid #C1C1C1;
+      line-height: normal;
+    }
+  }
 }
