ads link update

--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -466,6 +466,43 @@ main{
 
     }
   }
+  &.btn-mesh{
+    background: $white;
+    border:1px solid rgba(0,0,0,1);
+    padding: 22px 36px;
+    cursor: pointer;
+    display: inline-block;
+    transition: all ease 0.2s;
+    border-radius: 41px;
+    z-index: 8;
+    position: relative;
+    margin-right: 24px;
+    &.disable{
+      background: rgba(200,200,200,.2);
+      border-color: rgba(200,200,200,.8);
+    }
+    &.request{
+      font-size: 20px;
+    }
+    @media (max-width: $mobile-landscape){
+      margin-right: 0;
+      margin-bottom: 12px;
+      display: none;
+    }
+    h4{
+      line-height: normal;
+      font-weight: 600;
+      color: $black;
+    }
+    span{
+      font-size: 12px;
+      margin-top: 6px;
+      display: block;
+    }
+    &:hover{
+
+    }
+  }
 }
 
 .styles-angle{
