--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -13,11 +13,12 @@ $g-green: #6BBBA6;
 $black: #000000;
 $white: #ffffff;
 $lightbg: #EEE7D6;
-$yellow: #F7C945;
+$yellow: #FFD644;
 $grey: #5F5F5F;
 $blue: rgb(10, 114, 239);
 $red: #CA324F;
 $light-grey: #F3F3F8;
+$figma-bg: #E4E6EC;
 
 $dark-bg: #1A1A1A;
 
@@ -200,12 +201,16 @@ main{
       }
       ul{
         display: flex;
+        align-items: center;
         li{
           margin-left: 8px;
           a{
             text-decoration: none;
             color: $black;
             padding: 12px;
+            @media (max-width: $mobile-landscape){
+              padding: 6px;
+            }
           }
         }
       }
@@ -424,6 +429,10 @@ main{
     align-items: center;
     border-radius: 21px;
     padding: 12px 16px!important;
+    @media (max-width: $mobile-landscape){
+      padding: 6px 12px!important;
+
+    }
     img{
       height: 16px;
       margin-left: 6px;
@@ -717,7 +726,7 @@ main{
 }
 
 .article{
-  padding: 54px 54px 12px 54px;
+  padding: 18px 18px 12px 18px;
   @media (max-width: $mobile-landscape){
     padding: 0;
     margin-top: 24px;
@@ -1046,10 +1055,14 @@ main{
           line-height: normal;
           margin-bottom: 12px;
         }
+
         ul{
           li{
             line-height: 150%;
             font-size: 15px;
+            a{
+              font-weight: 600;
+            }
           }
         }
       }
@@ -1128,4 +1141,192 @@ main{
       margin-top: 12px;
     }
   }
+}
+
+
+.figma-plugin{
+  background-color: $figma-bg;
+  min-height: 100vh;
+}
+
+.figma-section{
+  width: 720px;
+  margin: 0 auto;
+  display: flex;
+  padding: 72px 16px;
+  align-items: center;
+  min-height:40vh;
+  @media (max-width: $tablet-wide){
+    width: 100%;
+    flex-direction: column;
+    padding: 0;
+    margin-bottom: 120px;
+  }
+  .fig-img{
+    display: flex;
+    img{
+      width: 280px;
+      box-shadow:
+        0px 4.1px 0.5px rgba(0, 0, 0, 0.038),
+        0px 11.3px 7.5px rgba(0, 0, 0, 0.055),
+        0px 27.1px 25.6px rgba(0, 0, 0, 0.072),
+        0px 90px 80px rgba(0, 0, 0, 0.11)
+    ;
+      @media (max-width: $tablet-wide){
+        width: 90%;
+        margin: 0 auto;
+        margin-bottom: 24px;
+      }
+    }
+  }
+  .fig-video{
+    video{
+        width: 280px;
+        border-radius: 4px;
+        box-shadow:
+          0px 4.1px 0.5px rgba(0, 0, 0, 0.038),
+          0px 11.3px 7.5px rgba(0, 0, 0, 0.055),
+          0px 27.1px 25.6px rgba(0, 0, 0, 0.072),
+          0px 90px 80px rgba(0, 0, 0, 0.11)
+      ;
+    }
+  }
+  .fig-text{
+    .content-wrapper{
+     
+      img{
+        height: 100px;
+        margin-bottom: 12px;
+        margin-top: 12px;
+        @media (max-width: $tablet-wide){
+          height: 70px;
+        }
+      }
+      .search-icon{
+        height: 120px;
+      }
+      h3{
+        font-size: 54px;
+        font-weight: 300;
+        letter-spacing: -.2px;
+      }
+      p{
+        margin-top: 16px;
+        font-size: 20px;
+        line-height: 130%;
+        font-weight: 300;
+      }
+      .fig-btn-box{
+        margin-top: 24px;
+        .btn{
+          img{
+            height: 24px;
+            position: absolute;
+          }
+          border-radius: 26px;
+          display: flex;
+          align-items: center;
+          align-content: center;
+          padding: 16px;
+          margin-bottom: 20px;
+          span{
+            font-size: 18px;
+            width: 100%;
+            letter-spacing: -.1px;
+          }
+        }
+        .fig-btn-f{
+          background: $black;
+          color: $white;
+          border: 1px solid $black;
+        }
+        .fig-btn-o{
+          border: 1px solid $black;
+        }
+      }
+    }
+  }
+
+  .fig-head{
+    padding-left: 120px;
+    @media (max-width: $tablet-wide){
+      padding: 24px;
+    }
+  }
+
+  .fig-search{
+    padding-right: 70px;
+    @media (max-width: $tablet-wide){
+      padding: 24px;
+      text-align: center;
+    }
+  }
+  .fig-open{
+    text-align: center;
+    .fig-btn-box{
+      flex-direction: row;
+      .btn{
+        margin: 24px;
+        display: inline-flex!important;
+        span{
+          padding-left: 50px;
+          padding-right: 10px;
+        }
+      }
+    }
+  }
+}
+
+
+.fig-plug-announce{
+  margin: 54px 54px 12px 54px;
+  background: $yellow;
+  border-radius: 24px;
+  display: flex;
+  align-items: center;
+  @media (max-width: $tablet-wide){
+   flex-direction: column;
+   margin: 0;
+   padding: 32px;
+  }
+  .left-box{
+    .fig-p-logo{
+      padding: 32px;
+      img{
+        height: 72px;
+      }
+    }
+  } 
+  .right-box{
+    text-align: left;
+    padding: 0 24px;
+    border-left: 2px solid $black;
+    @media (max-width: $tablet-wide){
+      border-top: 2px solid $black;
+      border-left: none;
+      padding: 12px;
+     }
+    .fig-text-btn{
+      display: flex;
+      @media (max-width: $tablet-wide){
+        flex-direction: column;
+       }
+    }
+    p{
+      font-size: 18px;
+      line-height: 130%;
+      font-weight: 300;
+      margin-bottom: 16px;
+      margin-right: 24px;
+    }
+    a{
+      font-weight: 500;
+      font-size: 18px;
+      letter-spacing: -.2px;
+      margin-right: 24px;
+      @media (max-width: $tablet-wide){
+        padding: 4px 0;
+       }
+    }
+  } 
 }
