--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -1441,3 +1441,59 @@ main{
     }
   }
 }
+
+
+.support{
+  .container{
+    a{
+      margin: 0 auto;
+      display: flex;
+      justify-content: center;
+      transition: all 300ms ease;
+      margin: 54px;
+      border: 1px solid #33E3E3;
+      border-radius: 24px;
+      background-color: #ECFFFF;
+      &:hover{
+        transform: scale(1.02);
+      }
+      @media (max-width: $tablet-wide){
+        margin: auto;
+        margin-bottom: 20px;
+      }
+      .box{
+        margin-top: 24px;
+        padding: 8px 40px;
+        p{
+          font-size: 20px;
+          line-height: 26px;
+          margin-bottom: 12px;
+          max-width: 600px;
+        }
+        .btn{
+          background-color: #0066FF;
+          img{
+            height: 24px;
+            margin-right: 12px;
+          }
+          border-radius: 26px;
+          display: inline-flex;
+          align-items: center;
+          align-content: center;
+          padding:12px 16px;
+          margin-bottom: 20px;
+          span{
+            font-size: 18px;
+            letter-spacing: -.1px;
+          }
+        }
+
+        .btn-o{
+          color: #fff;
+          font-size: 20px;
+          font-weight: 500;
+        }
+      }
+    }
+  }
+}
