--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -1432,7 +1432,7 @@ main{
         transform: scale(1.02);
       }
       img{
-        width: 40%;
+        max-width: 60%;
         border-radius: 12px;
         @media (max-width: $tablet-wide){
           width: 80%;
