--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -1501,30 +1501,36 @@ main{
 
 .support{
   .container{
-    a{
+    p{
       margin: 0 auto;
-      display: flex;
       justify-content: center;
       transition: all 300ms ease;
       margin: 54px;
-      border: 1px solid #33E3E3;
+      border: 1px solid #ffaec1;
       border-radius: 24px;
-      background-color: #ECFFFF;
+      background-color: #fff1f5;
+      padding: 12px 20px;
+      line-height: 120%;
+      color: #ff0000;
+      a{
+        color: #ff0000;
+      }
       &:hover{
-        transform: scale(1.02);
+        // transform: scale(1.02);
       }
       @media (max-width: $tablet-wide){
         margin: auto;
         margin-bottom: 20px;
       }
       .box{
-        margin-top: 24px;
+        margin-top: 16px;
         padding: 8px 40px;
         p{
           font-size: 20px;
           line-height: 26px;
           margin-bottom: 12px;
           max-width: 600px;
+          
         }
         .btn{
           background-color: #0066FF;
